--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ layout: default
 
 {% include experiences.html %}
 
-{% include certifications.html %}
+<! –– {% include certifications.html %} ––>
 
 {% include projects.html %}
 
