--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@ layout: default
 
 {% include projects.html %}
 
+{% include awards.html %}
+
 {% include oss-contributions.html %}
 
 {% include skills.html %}
